feat: playing around with the swaggo docs
